[GEDA-4] Investigate possibility of dynamic classing to replace reflection