@@ -1,1 +1,7 @@
 Please refer to Test to see how to use the Assembler.
+
+To run the test you need to add memory parameters:
+-Xmx1024M
+-XX:MaxPermSize=500M
+
+This is needed for performance tests!
